src/styles.css
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

:root {
  --text-color: hsl(0, 0%, 36%);
}

body {
  /* background-color: hsl(0, 0%, 95%); */
}

h1,
h2,
h3,
h4 {
  font-family: 'Playfair Display';
  font-weight: 500;
}

p {
  font-family: 'Roboto';
  color: var(--text-color);
}

/* Helper Classes */

.flex {
  display: flex;
  flex-direction: column;
}

/* ==== Header ==== */

header {
  /* display: flex;
  align-items: center;
  flex-direction: column;
  gap: 20px; */
  /* padding: 12px; */
  background: url(images/19861.jpg) center/cover no-repeat;
}

.header-img-container {
  position: relative;
  max-width: 90vw;
  box-shadow:
    rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
}

.profile-name {
  position: absolute;
  bottom: 0px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 60px;
  color: hsl(0, 0%, 98%);
  font-family: 'Playfair Display';
  line-height: 1.15;
  font-weight: 500;
  text-shadow:
    0px 4px 3px rgba(0, 0, 0, 0.4),
    0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

.header-img-container img {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

.about-section {
  display: grid;
  /* grid-template-rows: repeat(3, max-content); */
  place-items: center;
  gap: 12px;
  padding: 20px;
}

.social-links {
  display: flex;
  color: black;
  gap: 12px;
  font-size: 24px;
}

/* ==== Main Projects ==== */

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px 20px;
  gap: 20px;
}

main h2 {
  font-size: 2rem;
}

.project-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  place-content: center;
  gap: 52px;
}

.project-card {
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  min-height: 450px;
  border-radius: 20px;
}

.project-card h3 {
  font-size: 1.5rem;
}

.project-img-container {
  flex: 1;
}

.project-img-container img {
  height: 100%;
  aspect-ratio: 4/5;
  object-fit: cover;
}

.project-info-container {
  height: 240px;
  gap: 8px;
  padding: 16px;
}

.name-links-container {
  display: flex;
  justify-content: space-between;
}

.project-links {
  display: flex;
  align-items: center;
  gap: 16px;
}

.project-links a {
  display: flex;
  text-decoration: none;
  color: inherit;
}

.project-links,
.new-tab-icon {
  font-size: 24px;
}

/* ==== Contact ==== */

.contact {
  gap: 20px;
  padding: 24px;
  padding-bottom: 60px;
  background-color: hsl(192, 91%, 36%);
}

p.bigger-font {
  font-size: 20px;
}

.contact p {
  color: white;
}

.phone-number-cont,
.email-cont {
  display: flex;
  gap: 8px;
  color: white;
}

.contact h4 {
  align-self: center;
  font-size: 2rem;
  color: white;
}

.contact .social-links {
  align-self: center;
  font-size: 32px;
  gap: 24px;
}

/* ==== Tablets ==== */

@media (min-width: 590px) {

  /* ==== Header ==== */

  header .social-links {
    display: none;
  }

  header {
    display: flex;
    justify-content: center;
    /* padding: 20px; */
  }

  .header-img-container {
    width: 300px;
    margin-left: -60px;
    margin-top: -120px;
    margin-right: 20px;
    float: left;
    border-radius: 16px;
  }

  .profile-name {
    transform: translate(15%);
    top: 4px;
    width: max-content;
    font-size: clamp(2.5rem, 7vw, 3.75rem);
  }

  .header-img-container img {
    border-radius: 16px;
    aspect-ratio: 1 / 1;
    object-fit: cover;
  }

  .about-section {
    display: block;
    width: 75vw;
    margin-top: 10vh;
    padding: 60px 20px;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  }

  .about-section h1 {
    width: 100%;
    text-align: center;
  }
}

